# Puncher

./: CMakeLists.txt  LICENSE.md  README.md  bump_version.py
Puncher/: CMakeLists.txt  EnvelopeDisplayControl.cpp  EnvelopeDisplayControl.h  IVolumeNiceMeter.cpp  IVolumeNiceMeter.h  Puncher.RPP  Puncher.cpp  Puncher.h  Puncher.sln  README.md  config.h
Puncher/Puncher.xcworkspace/: contents.xcworkspacedata
Puncher/config/: Puncher-ios.xcconfig  Puncher-mac.xcconfig  Puncher-web.mk  Puncher-win.props
Puncher/installer/: Puncher.iss  changelog.txt  intro.rtf  known-issues.txt  license.rtf  readme-mac.rtf  readme-win-demo.rtf  readme-win.rtf
Puncher/projects/: Puncher-aax.vcxproj  Puncher-aax.vcxproj.filters  Puncher-app.vcxproj  Puncher-app.vcxproj.filters  Puncher-clap.vcxproj  Puncher-clap.vcxproj.filters  Puncher-vst2.vcxproj  Puncher-vst2.vcxproj.filters  Puncher-vst3.vcxproj  Puncher-vst3.vcxproj.filters  Puncher-wam-controller.mk  Puncher-wam-processor.mk
Puncher/resources/: IPlugAUViewController_vPuncher.xib  Puncher-AAX-Info.plist  Puncher-AU-Info.plist  Puncher-CLAP-Info.plist  Puncher-Pages.xml  Puncher-VST2-Info.plist  Puncher-VST3-Info.plist  Puncher-iOS-AUv3-Info.plist  Puncher-iOS-Info.plist  Puncher-iOS-LaunchScreen.storyboard  Puncher-iOS-MainInterface.storyboard  Puncher-macOS-AUv3-Info.plist  Puncher-macOS-AUv3Framework-Info.plist  Puncher-macOS-Info.plist  Puncher-macOS-MainMenu.xib  PuncherAU.h  PuncherAUv3Appex.m  main.rc  main.rc_mac_dlg
Puncher/scripts/: makedist-mac.sh  makedist-web.sh  makedist-win.bat  makeinstaller-mac.sh  makezip-win.py  (+3 more)
(+21 files in other folders)
